Remove rundant border-solid classes. Fix z-index on header since last changes.

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -46,8 +46,8 @@
     @apply contrast-more:text-black contrast-more:opacity-100 dark:text-accenttwo-100;
   }
   header {
-    @apply pad-wrap gradient-border sticky -top-8 z-30 flex min-h-28 items-center justify-between;
-    @apply border-b-2 border-t-[2rem] border-solid bg-accentone-100 py-6;
+    @apply pad-wrap gradient-border sticky -top-8 z-50 flex min-h-28 items-center justify-between;
+    @apply border-b-2 border-t-[2rem] bg-accentone-100 py-6;
   }
   header > button {
     @apply m-0 pl-4 pr-0 font-urbanist font-medium uppercase tracking-wider text-heading md:font-normal lg:text-2xl;
@@ -75,7 +75,7 @@
     @apply relative z-10 ml-auto block h-10 w-16 px-5 md:hidden;
   }
   .hamburger-line {
-    @apply gradient-border absolute top-4 block w-7 rotate-0 border-2 border-solid brightness-90 duration-200 ease-in-out first:top-2 last:top-6;
+    @apply gradient-border absolute top-4 block w-7 rotate-0 border-2 brightness-90 duration-200 ease-in-out first:top-2 last:top-6;
   }
   .closer {
     @apply fixed inset-0 block size-full cursor-default text-transparent;
@@ -87,7 +87,7 @@
     @apply absolute inset-1 size-6 rounded-full bg-accenttwo-200 p-1 text-accentone-100 transition-transform dark:translate-x-8 dark:text-siteblack;
   }
   footer {
-    @apply pad-wrap gradient-border min-h-24 border-t border-solid bg-accentone-300 py-7;
+    @apply pad-wrap gradient-border min-h-24 border-t bg-accentone-300 py-7;
     @apply contrast-more:bg-accentone-100 dark:bg-accentone-200 md:flex md:items-center md:justify-between;
   }
   footer h2 {
